--- a/src/app/panels/iframe/editor.html
+++ b/src/app/panels/iframe/editor.html
@@ -1,40 +1,42 @@
 <div class="row-fluid" style="margin-bottom: 10px;">
-    The panel needs to have at least one metric. For each metric, you can select a different type of stats to be shown.
-    Decimal Digit is the number of digits to display after the decimal point. And you can specify your own Label for
-    each metric (optional). Not all stats are supported for all field types. Check Solr documentation for details.
+    The panel needs to have at least one IFrameDetail. For each IFrameDetail, you can specify a URL to be displayed.
 </div>
 
 <div class="row-fluid">
-    <button class="btn btn-success" ng-click="addMetric();">Add Metric</button>
+    <button class="btn btn-success" ng-click="addIFrameDetail();">Add IFrameDetail</button>
 </div>
 
 <div class="row-fluid">
     <div class="span12">
         <table class="table table-condensed table-striped">
             <thead>
-                <th>Stats Type</th>
+                <th>URL</th>
+                <!--<th>Stats Type</th>
                 <th>Field <tip>Not all statistics are supported for all field types. Check Solr documentation for details.</tip></th>
                 <th>Decimal Digits <tip>The number of digits to display after the decimal point.</tip></th>
-                <th>Label</th>
+                <th>Label</th>-->
             </thead>
-            <tr ng-repeat="metric in panel.metrics" data-drag="false" jqyoui-draggable="{animate:true}">
-                <td>
-                    <select class="input-small" ng-change="set_refresh(true)" ng-model="metric.type"
+            <tr ng-repeat="IFrameDetail in panel.IFrameDetails" data-drag="false" jqyoui-draggable="{animate:true}">
+              <td>
+                <input type="text" class="input-large" placeholder="URL" ng-model="IFrameDetail.url">
+              </td>
+                <!--<td>
+                    <select class="input-small" ng-change="set_refresh(true)" ng-model="IFrameDetail.type"
                             ng-options="f for f in ['count','min','mean','max','sum','stddev','sumOfSquares','missing']"></select>
                 </td>
                 <td>
                     <input type="text" class="input-large" placeholder="Field name" bs-typeahead="fields.list"
-                           ng-model="metric.field" ng-change="set_refresh(true)">
+                           ng-model="IFrameDetail.field" ng-change="set_refresh(true)">
                 </td>
                 <td>
-                    <select class="input-mini" ng-model="metric.decimalDigits" ng-options="f for f in [0,1,2,3,4,5,6,7,8,9]"
+                    <select class="input-mini" ng-model="IFrameDetail.decimalDigits" ng-options="f for f in [0,1,2,3,4,5,6,7,8,9]"
                             ng-change="set_refresh(true)"></select>
                 </td>
                 <td>
-                    <input type="text" class="input-large" placeholder="Optional" ng-model="metric.label">
-                </td>
+                    <input type="text" class="input-large" placeholder="Optional" ng-model="IFrameDetail.label">
+                </td>-->
                 <td>
-                    <button class="btn btn-danger" ng-click="removeMetric(metric)"><i class="icon-remove"></i></button>
+                    <button class="btn btn-danger" ng-click="removeIFrameDetail(IFrameDetail)"><i class="icon-remove"></i></button>
                 </td>
             </tr>
         </table>
@@ -48,11 +50,11 @@
         <!--<select class="input-small" ng-model="panel.chart"-->
                 <!--ng-options="f for f in ['bar','pie','list','total']"></select></span>-->
     <!--</div>-->
-    <div class="span2" ng-show="panel.chart == 'total' || panel.chart == 'list'">
+    <!--<div class="span2" ng-show="panel.chart == 'total' || panel.chart == 'list'">
         <label class="small">Font Size</label>
         <select class="input-mini" ng-model="panel.style['font-size']"
                 ng-options="f for f in ['7pt','8pt','9pt','10pt','12pt','14pt','16pt','18pt','20pt','24pt','28pt','32pt','36pt','42pt','48pt','52pt','60pt','72pt']"></select></span>
-    </div>
+    </div>-->
     <!--<div class="span3" ng-show="panel.chart == 'bar' || panel.chart == 'pie'">-->
         <!--<label class="small">Legend</label>-->
         <!--<select class="input-small" ng-model="panel.counter_pos"-->
@@ -74,7 +76,7 @@
     <!--</div>-->
 </div>
 
-<div class="row-fluid">
+<!--<div class="row-fluid">
     <h5>Real-time (Auto-refresh)</h5>
     <div class="span1">
         <label class="small">Enable</label><input type="checkbox" ng-model="panel.refresh.enable"
@@ -86,4 +88,4 @@
         </label>
         <input type="number" min="2" class="input-mini" ng-model="panel.refresh.interval">
     </div>
-</div>
+</div>-->
