iFrame clean up.

--- a/src/app/panels/iframe/editor.html
+++ b/src/app/panels/iframe/editor.html
@@ -1,10 +1,10 @@
 <div class="row-fluid" style="margin-bottom: 10px;">
-    The panel needs to have at least one IFrameDetail. For each IFrameDetail, you can specify a URL to be displayed.
+    You can specify a URL to be displayed.
 </div>
 
-<div class="row-fluid">
+<!--<div class="row-fluid">
     <button class="btn btn-success" ng-click="addIFrameDetail();">Add IFrameDetail</button>
-</div>
+</div>-->
 
 <div class="row-fluid">
     <div class="span12">
