--- a/src/app/panels/subcollection/diagnostic.html
+++ b/src/app/panels/subcollection/diagnostic.html
@@ -11,8 +11,8 @@
 
   </head>
   <body>
-    <h1>Diagnostic</h1>
-    <div id="content"></div>
+    <!--<h1>Diagnostic</h1>
+    <div id="content"></div>-->
     <div id="graph"></div>
   </body>
 </html>
