--- a/src/app/panels/subcollection/module.html
+++ b/src/app/panels/subcollection/module.html
@@ -1,16 +1,16 @@
-<div ng-controller='iframe' ng-init="init()">
+<div ng-controller='subcollection' ng-init="init()">
     <style>
-        .iframe-panel-IFrameDetail {
+        .subcollection-panel-subcollectionDetail {
             display: inline-block;
             padding-right: 10px;
         }
-        .iframe-panel-IFrameDetail-label {
+        .subcollection-panel-subcollectionDetail-label {
             font-size: 10pt;
         }
     </style>
     <div>
-      <!--<div>{{panel.IFrameDetails[0].url}}</div>-->
-      <iframe id="{{$id}}-iframe" src="{{panel.IFrameDetails[0].url}}" seamless="true" frameBorder="false" height="100%" width="100%" />
+      <!--<div>{{panel.subcollectionDetails[0].url}}</div>-->
+      <iframe id="{{$id}}-subcollection" src="{{panel.subcollectionDetails[0].url}}" scrolling="no" style="overflow:hidden;" seamless="true" frameBorder="false" height="400px" width="100%" />
     </div>
 
 
@@ -38,7 +38,7 @@
 
     <div style="clear:both"></div>
 
-    <div ng-show="panel.chart == 'pie' || panel.chart == 'bar'" iframe-chart params="{{panel}}"
+    <div ng-show="panel.chart == 'pie' || panel.chart == 'bar'" subcollection-chart params="{{panel}}"
          style="position:relative"></div>
 
     <div ng-show="panel.counter_pos == 'below' && (panel.chart == 'bar' || panel.chart == 'pie')" id='{{$id}}-legend'>
@@ -63,14 +63,14 @@
 
     <!-- TODO
     <div ng-show="panel.chart == 'total'">
-        <div ng-style="panel.style" class="iframe-panel-IFrameDetail">
-            <div>{{dashboard.numberWithCommas(iframe)}}</div>
-            <div class="iframe-panel-IFrameDetail-label">{{panel.stats_fieldLabel}}</div>
+        <div ng-style="panel.style" class="subcollection-panel-subcollectionDetail">
+            <div>{{dashboard.numberWithCommas(subcollection)}}</div>
+            <div class="subcollection-panel-subcollectionDetail-label">{{panel.stats_fieldLabel}}</div>
         </div>
 
-        <div ng-style="panel.style" class="iframe-panel-IFrameDetail" ng-repeat="IFrameDetail in panel.IFrameDetails">
-            <div>{{dashboard.numberWithCommas(IFrameDetail.value)}}</div>
-            <div class="iframe-panel-IFrameDetail-label">{{IFrameDetail.label}}</div>
+        <div ng-style="panel.style" class="subcollection-panel-subcollectionDetail" ng-repeat="subcollectionDetail in panel.subcollectionDetails">
+            <div>{{dashboard.numberWithCommas(subcollectionDetail.value)}}</div>
+            <div class="subcollection-panel-subcollectionDetail-label">{{subcollectionDetail.label}}</div>
         </div>
 
     </div> -->
@@ -78,7 +78,7 @@
   <span ng-show="panel.chart == 'list'">
     <div ng-style="panel.style" style="display:inline-block;line-height:{{panel.style['font-size']}}"
          ng-repeat="query in data">
-      <i class="icon-circle" style="color:{{query.info.color}}"></i> {{query.info.alias}} ({{query.iframe}})
+      <i class="icon-circle" style="color:{{query.info.color}}"></i> {{query.info.alias}} ({{query.subcollection}})
     </div>
   </span><br ng-show="panel.arrangement == 'vertical' && panel.chart == 'list'">
 
