--- a/src/app/panels/subcollection/module.html
+++ b/src/app/panels/subcollection/module.html
@@ -9,8 +9,13 @@
         }
     </style>
     <div>
-      <!--<div>{{panel.subcollectionDetails[0].url}}</div>-->
-      <iframe id="{{$id}}-subcollection" src="{{panel.subcollectionDetails[0].url}}" scrolling="no" style="overflow:hidden;" seamless="true" frameBorder="false" height="400px" width="100%" />
+      <!--<div>{{panel.subcollectionDetails[0].url}}</div> {{panel.subcollectionDetails[0].url}}
+      <th>SOLR Collection</th>
+      <th>Control Library</th>
+      <th>Control Type</th>
+      <th>Control Height (px)</th>
+    -->
+      <iframe id="{{$id}}-subcollection" src="app/panels/subcollection/_subcollection-diagnostic.html?svr={{panel.subcollectionDetails[0].solrServer}}&q={{panel.subcollectionDetails[0].solrQuery}}&col={{panel.subcollectionDetails[0].solrCollection}}&lib={{panel.subcollectionDetails[0].controlLibrary}}&type={{panel.subcollectionDetails[0].controlType}}" scrolling="no" style="overflow:hidden;" seamless="true" frameBorder="false" height="{{panel.subcollectionDetails[0].controlHeight}}px" width="100%" />
     </div>
 
 
