--- a/src/app/panels/subcollection/_subcollection-diagnostic.html
+++ b/src/app/panels/subcollection/_subcollection-diagnostic.html
@@ -7,6 +7,13 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js" charset="utf-8" type="text/javascript"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chartist/0.9.7/chartist.min.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+    <script type="text/javascript" src="chartjs/chartjs.js"></script>
+    <script type="text/javascript" src="chartist/chartist.js"></script>
+    <script type="text/javascript" src="cytospace/cytospace.js"></script>
+    <script type="text/javascript" src="dimplejs/dimplejs.js"></script>
+    <script type="text/javascript" src="nvd3/nvd3.js"></script>
+    <script type="text/javascript" src="sigmajs/sigmajs.js"></script>
+    <script type="text/javascript" src="visjs/visjs.js"></script>
     <script type="text/javascript" src="diagnostic.js"></script>
 
   </head>
@@ -14,5 +21,6 @@
     <!--<h1>Diagnostic</h1>
     <div id="content"></div>-->
     <div id="graph"></div>
+    <canvas id="cChart" width="100%" height="100%"></canvas>
   </body>
 </html>
