--- a/src/app/panels/subcollection/_subcollection-base.html
+++ b/src/app/panels/subcollection/_subcollection-base.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script type="text/javascript" src="chartjs/chartjs.js"></script>
     <script type="text/javascript" src="chartist/chartist.js"></script>
-    <script type="text/javascript" src="cytospace/cytospace.js"></script>
+    <script type="text/javascript" src="cytoscape/cytoscape.js"></script>
     <script type="text/javascript" src="dimplejs/dimplejs.js"></script>
     <script type="text/javascript" src="nvd3/nvd3.js"></script>
     <script type="text/javascript" src="sigmajs/sigmajs.js"></script>
@@ -26,6 +26,6 @@
     <!--<h1>Diagnostic</h1>
     <div id="content"></div>-->
     <div id="graph"></div>
-    <canvas id="cChart" width="100%" height="100%"></canvas>
+    <canvas id="cChart" width="100%" height="30%"></canvas>
   </body>
 </html>
