--- a/src/app/panels/subcollection/_subcollection-base.html
+++ b/src/app/panels/subcollection/_subcollection-base.html
@@ -4,7 +4,8 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/chartist/0.9.7/chartist.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8" type="text/javascript"></script>
-    <script src="http://dimplejs.org/dist/dimple.v2.1.6.min.js"></script>
+    <!--<script src="http://dimplejs.org/dist/dimple.v2.1.6.min.js"></script>-->
+    <script src="http://dimplejs.org/dist/dimple.v2.1.6.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js" charset="utf-8" type="text/javascript"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chartist/0.9.7/chartist.min.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.bundle.min.js"></script>
