--- a/src/app/panels/subcollection/_subcollection-base.html
+++ b/src/app/panels/subcollection/_subcollection-base.html
@@ -1,9 +1,11 @@
 <html>
-  <head>
+  <head><meta charset="utf-8">
     <title>diagnostic</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.3/nv.d3.min.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/chartist/0.9.7/chartist.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.3/nv.d3.min.js"charset="utf-8" type="text/javascript"></script>
     <!--<script src="http://dimplejs.org/dist/dimple.v2.1.6.min.js"></script>-->
     <script src="http://dimplejs.org/dist/dimple.v2.1.6.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js" charset="utf-8" type="text/javascript"></script>
@@ -28,5 +30,6 @@
     <div id="content"></div>-->
     <div id="graph"></div>
     <canvas id="cChart" width="100%" height="30%"></canvas>
+    <svg id="svgblock" width="100%" height="30%"></svg>
   </body>
 </html>
