--- a/src/app/panels/subcollection/_subcollection-base.html
+++ b/src/app/panels/subcollection/_subcollection-base.html
@@ -30,6 +30,6 @@
     <div id="content"></div>-->
     <div id="graph"></div>
     <canvas id="cChart" width="100%" height="30%"></canvas>
-    <svg id="svgblock" width="100%" height="30%"></svg>
+    <svg id="svgblock" width="100%" height="30%" style="top:0px; left:0px;"></svg>
   </body>
 </html>
